Android项目修改源代码主包名

--- a/lavsource-bilibili-android/app/src/main/AndroidManifest.xml
+++ b/lavsource-bilibili-android/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name="de.honoka.lavender.lavsource.ui.MainActivity"
+            android:name="de.honoka.lavender.lavsource.android.ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,7 +26,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="de.honoka.lavender.lavsource.ui.WebActivity"
+            android:name="de.honoka.lavender.lavsource.android.ui.WebActivity"
             android:exported="false"
             android:configChanges="orientation|screenSize" />
     </application>
