--- a/lavsource-bilibili-server/src/main/resources/application.yml
+++ b/lavsource-bilibili-server/src/main/resources/application.yml
@@ -1,7 +1,9 @@
 spring:
+  profiles:
+    active: dev
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:./files/lavender-data-source-bilibili
+    url: jdbc:h2:./files/lavsource-bilibili-server;auto_server=true
   jpa:
     show-sql: true
     hibernate:
