--- a/lavsource-bilibili-android/app/src/main/AndroidManifest.xml
+++ b/lavsource-bilibili-android/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/lavender"
+        android:icon="@drawable/lavsource_bilibili"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/lavender"
+        android:roundIcon="@drawable/lavsource_bilibili"
         android:supportsRtl="true"
         android:theme="@style/Theme.LavSourceApp"
         android:usesCleartextTraffic="true"
