--- a/lavsource-bilibili-web/package.json
+++ b/lavsource-bilibili-web/package.json
@@ -8,19 +8,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
-    "pinia": "^2.1.6",
+    "axios": "^1.5.1",
     "element-plus": "^2.3.14",
+    "pinia": "^2.1.6",
+    "uuid": "^9.0.1",
     "vant": "^4.7.2",
-    "axios": "^1.5.1"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "vite": "^4.4.9",
+    "@vant/auto-import-resolver": "^1.0.2",
     "@vitejs/plugin-vue": "^4.3.4",
-    "unplugin-vue-components": "^0.25.2",
     "sass": "^1.68.0",
     "sass-loader": "^13.3.2",
-    "@vant/auto-import-resolver": "^1.0.2"
+    "unplugin-vue-components": "^0.25.2",
+    "vite": "^4.4.9"
   }
 }
