--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,33 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+          xmlns:tools="http://schemas.android.com/tools">
 
     <!-- 必须设置 -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <!-- 必须设置usesCleartextTraffic，否则不能加载http -->
-    <application
-        android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/lavsource_bilibili"
-        android:label="@string/app_name"
-        android:roundIcon="@drawable/lavsource_bilibili"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.LavSourceApp"
-        android:usesCleartextTraffic="true"
-        tools:targetApi="31">
-        <activity
-            android:name="de.honoka.lavender.lavsource.android.ui.MainActivity"
-            android:exported="true">
+    <application android:allowBackup="true"
+                 android:dataExtractionRules="@xml/data_extraction_rules"
+                 android:fullBackupContent="@xml/backup_rules"
+                 android:icon="@drawable/lavsource_bilibili"
+                 android:label="@string/app_name"
+                 android:roundIcon="@drawable/lavsource_bilibili"
+                 android:supportsRtl="true"
+                 android:theme="@style/Theme.LavSourceApp"
+                 android:usesCleartextTraffic="true"
+                 tools:targetApi="31">
+        <activity android:name="de.honoka.lavender.lavsource.android.ui.MainActivity"
+                  android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="de.honoka.lavender.lavsource.android.ui.WebActivity"
-            android:exported="false"
-            android:configChanges="orientation|screenSize" />
+        <activity android:name="de.honoka.lavender.lavsource.android.ui.WebActivity"
+                  android:exported="false"
+                  android:configChanges="orientation|screenSize" />
     </application>
 </manifest>
